fixed css spacing, installed bootstrap

--- a/src/index.scss
+++ b/src/index.scss
@@ -24,6 +24,7 @@ $primaryBlue: #4386fc;
 }
 
 .parentContainer {
+  margin: auto;
   font-family: "Oswald", sans-serif;
   min-height: 100%;
   height: 100%;
@@ -33,13 +34,39 @@ $primaryBlue: #4386fc;
 }
 
 .navBar {
+  background-color: red;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
+}
+
+h1 {
+  align-items: center;
+}
+
+.navBarLinks {
+  list-style-type: none; //removes bullets
+  justify-content: space-between;
+  display: inherit;
+}
+
+li {
+  background-color: green;
+  padding: 1rem;
+}
+
+.slogan,
+.search-form {
+  margin: auto;
 }
 
 .customLink {
-  text-decoration: none !important;
-  font-size: 26px;
+  list-style-type: none; //removes bullets
+  // text-decoration: none !important;
+  font-size: 2rem;
   color: $base-color;
+}
+
+.title {
+  margin: 0;
 }
